--- a/src/encoder/CMakeLists.txt
+++ b/src/encoder/CMakeLists.txt
@@ -1,3 +1,7 @@
 include(${QT_USE_FILE})
 
 add_library(encoder QREncoder.cpp)
+
+IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+  SET_TARGET_PROPERTIES(encoder PROPERTIES COMPILE_FLAGS "-fPIC")
+ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
